Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P2: Important
-
Resolution: Done
-
Affects Version/s: Qt Creator 6.0.0-beta1
-
Fix Version/s: Qt Creator 6.0.0-beta2
-
Component/s: C/C++/Obj-C++ Support
-
Labels:None
-
Platform/s:
-
Commits:19119b953395257bac345486a3ab10b9c5cf16c5 (qt-creator/qt-creator/6.0)
Description
I decided to try out the clangd-based C++ model after installing Creator 6 beta 1. Unfortunately, doing so deleted the compile_commands.json file of my compilation database project.
And while clangd overwrites my compile_commands.json, the Creator UI constantly updates in response to the changes, and after a few seconds, Creator crashes.
It seems like a very bad idea to have clangd create any files whatsoever outside the .cache directory that seems to be there for clangd use. As happens in this case, doing so runs the danger of overwriting user files that belong to the project.'
As a side note, even a name like `.cache` seems too generic and prone to conflict. Perhaps it's a better idea to use something unique, like `.qtcreator-clangd-cache` instead.